Fixed positioning on hamburger menu on iphones

--- a/wp-content/themes/epik/assets/sass/layout/_before-header.scss
+++ b/wp-content/themes/epik/assets/sass/layout/_before-header.scss
@@ -84,7 +84,7 @@
 
 		@include media($large-screen-up) {
 			@include padding(3.5px 0);
-			font-size: rem(14);
+			font-size: em(14);
 			margin-top: 0;
 		}
 
